add  names to index.html

--- a/index.html
+++ b/index.html
@@ -74,6 +74,22 @@ https://templatemo.com/tm-530-mini-profile
             Sample
           </a>
 
+          <a class="tm-portfolio-name text-white tm-bg-green" href="./hasnavi.html">
+            hasnavi
+          </a>
+
+          <a class="tm-portfolio-name text-white tm-bg-green" href="./izi.html">
+            izi
+          </a>
+
+          <a class="tm-portfolio-name text-white tm-bg-green" href="./movahhed.html">
+            movahhed
+          </a>
+
+          <a class="tm-portfolio-name text-white tm-bg-green" href="./pouyan.html">
+            pouyan
+          </a>
+
         </div>
       </div>
     </div>
